add header with navbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img class="header-background" src="img/wave.svg" />
+    <header>
+      <h1>Marceli Mietla</h1>
+      <nav>
+        <div class="nav-about">About me</div>
+        <div class="nav-projects">Projects</div>
+        <div class="nav-skills">Skills</div>
+        <div class="nav-contact">Contact</div>
+      </nav>
+    </header>
+    <main></main>
     <script src="script.js" async defer></script>
   </body>
 </html>
