add about me section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
         <div class="nav-contact">Contact</div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <img class="portrait" src="img/norbi.jpg" alt="A photo of Marceli" />
+      <section class="about-me">
+        <h2>About me</h2>
+        <article>
+          My name is Marceli. I am from Poland and like web developer and
+          machine learning. I am going to secondary school.
+        </article>
+      </section>
+    </main>
     <script src="script.js" async defer></script>
   </body>
 </html>
