add skills without technology

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
           machine learning. I am going to secondary school.
         </article>
       </section>
+      <section class="skills">
+        <h2>Skills</h2>
+        <div class="technology"></div>
+      </section>
     </main>
     <script src="script.js" async defer></script>
   </body>
