add technology icons to skills

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Portfolio Marceli</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="node_modules\@fortawesome\fontawesome-free/css/all.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <img class="header-background" src="img/wave.svg" />
@@ -29,9 +33,17 @@
       </section>
       <section class="skills">
         <h2>Skills</h2>
-        <div class="technology"></div>
+        <i class="fab fa-html5"></i>
+        <i class="fab fa-css3-alt"></i>
+        <i class="fab fa-js-square"></i>
+        <i class="fab fa-python"></i>
+        <i class="fab fa-npm"></i>
+        <i class="fab fa-git"></i>
+        <i class="fab fa-github"></i>
+        <i class="fab fa-node"></i>
       </section>
     </main>
+
     <script src="script.js" async defer></script>
   </body>
 </html>
