add appear technology when click on skills

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       </section>
       <section class="skills">
         <h2>Skills</h2>
-        <i class="fab fa-html5"></i>
-        <i class="fab fa-css3-alt"></i>
-        <i class="fab fa-js-square"></i>
-        <i class="fab fa-python"></i>
-        <i class="fab fa-npm"></i>
-        <i class="fab fa-git"></i>
-        <i class="fab fa-github"></i>
-        <i class="fab fa-node"></i>
+        <i class="fab fa-html5 hidden"></i>
+        <i class="fab fa-css3-alt hidden"></i>
+        <i class="fab fa-js-square hidden"></i>
+        <i class="fab fa-python hidden"></i>
+        <i class="fab fa-npm hidden"></i>
+        <i class="fab fa-git hidden"></i>
+        <i class="fab fa-github hidden"></i>
+        <i class="fab fa-node hidden"></i>
       </section>
     </main>
 
