--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
       </section>
       <section class="skills">
         <h2>Skills</h2>
-        <i class="fab fa-html5 hidden"></i>
-        <i class="fab fa-css3-alt hidden"></i>
-        <i class="fab fa-js-square hidden"></i>
-        <i class="fab fa-python hidden"></i>
-        <i class="fab fa-npm hidden"></i>
-        <i class="fab fa-git hidden"></i>
-        <i class="fab fa-github hidden"></i>
-        <i class="fab fa-node hidden"></i>
+        <i class="fab fa-html5 hidden"><span class="tooltip">HTML5</span></i>
+        <i class="fab fa-css3-alt hidden"><span class="tooltip">CSS3</span></i>
+        <i class="fab fa-js-square hidden"
+          ><span class="tooltip">JavaScript</span></i
+        >
+        <i class="fab fa-python hidden"><span class="tooltip">Python</span></i>
+        <i class="fab fa-npm hidden"><span class="tooltip">npm</span></i>
+        <i class="fab fa-git hidden"><span class="tooltip">Git</span></i>
+        <i class="fab fa-github hidden"><span class="tooltip">GitHub</span></i>
+        <i class="fab fa-node hidden"><span class="tooltip">node JS</span></i>
       </section>
     </main>
 
