add projects section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <i class="fab fa-github hidden"><span class="tooltip">GitHub</span></i>
         <i class="fab fa-node hidden"><span class="tooltip">node JS</span></i>
       </section>
+      <section class="projects">
+        <h2>Projects</h2>
+      </section>
     </main>
 
     <script src="script.js" async defer></script>
