add full responisive design

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img class="header-background" src="img/wave.svg" />
     <header>
       <h1>Marceli Mietla</h1>
+      <button class="nav-button hidden"></button>
       <nav>
         <div class="nav-about">About me</div>
         <div class="nav-projects">Projects</div>
