add under portrait contatct icons

--- a/index.html
+++ b/index.html
@@ -17,14 +17,27 @@
       <h1>Marceli Mietla</h1>
       <button class="nav-button hidden"></button>
       <nav>
-        <div class="nav-about">About me</div>
-        <div class="nav-projects">Projects</div>
-        <div class="nav-skills">Skills</div>
-        <div class="nav-contact">Contact</div>
+        <div class="nav-about"><a href="#about-me">About me</a></div>
+        <div class="nav-projects"><a href="#about-me">Projects</a></div>
+        <div class="nav-skills"><a href="#about-me">Skills</a></div>
+        <div class="nav-contact"><a href="#about-me">Contact</a></div>
       </nav>
     </header>
     <main>
-      <img class="portrait" src="img/norbi.jpg" alt="A photo of Marceli" />
+      <section class="portrait-container">
+        <img class="portrait" src="img/norbi.jpg" alt="A photo of Marceli" />
+        <div class="contact-info">
+          <a href="mailto: marcel.mietla3@gmail.com"
+            ><i class="fas fa-envelope"></i
+          ></a>
+          <a href="https://github.com/Carexo"
+            ><i class="fab fa-github-square"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/marceli-miet%C5%82a-209a411b8/">
+            <i class="fab fa-linkedin"></i
+          ></a>
+        </div>
+      </section>
       <section class="about-me">
         <h2>About me</h2>
         <article>
