add project field:

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@ Description...</textarea
         </form>
         <div class="contact-info">
           <div class="icon-wrap">
-            <a href="mailto: marcel.mietla3@gmail.com"
-              ><i class="fas fa-envelope"></i
-            ></a>
+            <i class="fas fa-envelope"></i>
             E-mail
           </div>
           <div class="icon-wrap">
@@ -65,9 +63,7 @@ Description...</textarea
       <section class="portrait-container">
         <img class="portrait" src="img/norbi.jpg" alt="A photo of Marceli" />
         <div class="contact-info">
-          <a href="mailto: marcel.mietla3@gmail.com"
-            ><i class="fas fa-envelope"></i
-          ></a>
+          <i class="fas fa-envelope"></i>
           <a href="https://github.com/Carexo"
             ><i class="fab fa-github-square"></i
           ></a>
@@ -98,6 +94,18 @@ Description...</textarea
       </section>
       <section id="projects" class="projects">
         <h2>Projects</h2>
+      </section>
+      <section class="projects-container">
+        <button class="projects-button-close close"></button>
+        <div class="project">
+          <h3>To do App</h3>
+            <img class="project-img" src="img/toDoApp.png" />
+            <div class="project-info">
+            <p>This is the simple to do app. Build with vanilla JavaScript</p>
+            <a href="https://carexo.github.io/To-Do-App/" target="blank" ><button class="visit-button">Visit Website</button></a>
+          </div>
+          </div>
+        </div>
       </section>
     </main>
     <div class="overlay hidden"></div>
