--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Description...</textarea
         </div>
       </section>
       <section class="portrait-container">
-        <img class="portrait" src="img/norbi.jpg" alt="A photo of Marceli" />
+        <img class="portrait" src="img/portrait.jpg" alt="A photo of Marceli" />
         <div class="contact-info">
           <i class="fas fa-envelope"></i>
           <a href="https://github.com/Carexo"
@@ -95,7 +95,7 @@ Description...</textarea
       <section id="projects" class="projects">
         <h2>Projects</h2>
       </section>
-      <section class="projects-container">
+      <section class="projects-container  hidden">
         <button class="projects-button-close close"></button>
         <div class="project">
           <h3>To do App</h3>
